--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-http-proxy": "^2.0.0"
+    "express-http-proxy": "^2.0.0",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0"
   },
   "engines": {
     "node": "16.x"
